<resources>
    <string name="app_name">AutoCost</string>
    <!-- ControlAutoFragment -->
    <string name="choose_your_auto">Choose your auto</string>
    <string name="add_auto_text">Add auto</string>
    <string name="actual_text">View all relevant information</string>
    <string name="expenses_text">Keep track of expenses</string>
    <string name="add_text">Add your auto</string>

    <!-- AddAutoFragment -->
    <string name="continue_text">Continue</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="years">Release year</string>
    <string name="fuel">Fuel type</string>
    <string name="insurance">Insurance</string>
    <string name="description">To control financial expenses</string>
    <string name="add_your_auto">@string/add_text</string>

    <!-- SettingsAutoFragment -->
    <string name="common">General</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="manage">Auto control</string>
    <string name="event">Upcoming events</string>
    <string name="clear">Clear your expense history</string>

    <!-- AutoInformationFragment -->
    <string name="brand_inf">@string/brand</string>
    <string name="model_inf">@string/model</string>
    <string name="registration_inf">Registration certificate</string>

    <!-- EventAutoFragment -->
    <string name="future_event">@string/event</string>

    <!-- WastesAutoFragment -->
    <string name="period">Period</string>
    <string name="continue_wastes">Save</string>
<!--    <plurals name="periods">-->
<!--        <item quantity="zero">День</item>-->
<!--        <item quantity="one">Неделя</item>-->
<!--        <item quantity="two">Месяц</item>-->
<!--        <item quantity="few">План.\nрасходы</item>-->
<!--        <item quantity="other">Все время</item>-->
<!--    </plurals>-->

    <!-- RulesSectionsFragment -->

    <!-- RulesFragment -->
    <string name="pdd">Traffic Laws</string>
    <string name="pdd_brief">@string/pdd</string>
    <string name="new_waste_name">New waste name</string>
    <string name="new_waste_cost">New waste amount</string>

    <!-- Fines -->
    <string name="check_fines_button">Check</string>
    <string name="last_check">The check was not performed</string>
    <string name="no_internet">You are not connected to the Internet</string>

    <!--Notifications-->
    <string name="events">Events</string>
    <string name="events_description">Get notifications about upcoming events</string>
    <string name="fines">Penalties</string>
    <string name="event_date">Event date</string>
    <string name="new_event_name">New еvent</string>
    <string name="new_category_name">New category name</string>

    <!--AlertDialog-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_expense">You are going to delete the waste. Continue?</string>
    <string name="delete_auto">You are going to delete the car. Continue?</string>
    <string name="add_event_text">Add an upcoming event</string>
    <string name="delete_expenses" >You are going to delete all the expenses and categories of this car. Continue?</string>
    <string name="delete_auto_label">Delete auto</string>
    <string name="delete_expense_label">Delete expense</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="event_name">Event name</string>
    <string name="delete_event">You are going to delete the event. Continue?</string>
    <string name="delete_event_label">Delete event</string>

    <string-array name="themes">
        <!--        <item>Светлая</item>-->
        <item>Dark</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
    </string-array>

    <plurals name="days">
        <item quantity="one">%1$d day</item>
        <item quantity="few">%1$d days</item>
        <item quantity="many">%1$d days</item>
        <item quantity="other">%1$d days</item>
    </plurals>

    <string-array name="wastes_periods">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>All time</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>