<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.ChooseAutoFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalBeginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalBeginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalEndGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:src="@drawable/logotip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalBeginGuideline"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="20sp"
        android:text="@string/choose_your_auto"
        android:gravity="center"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_autos_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        tools:listitem="@layout/add_recycle_item"
        app:layout_constraintTop_toBottomOf="@id/mainTextView"
        app:layout_constraintBottom_toTopOf="@id/addTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/addTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        android:text="@string/add_text"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/expensesTextView"
        app:layout_constraintStart_toStartOf="@id/expensesTextView"/>

    <TextView
        android:id="@+id/expensesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        android:text="@string/expenses_text"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="@id/actualTextView"
        app:layout_constraintBottom_toTopOf="@id/actualTextView"/>

    <TextView
        android:id="@+id/actualTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmall"
        android:text="@string/actual_text"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideLine"
        app:layout_constraintStart_toStartOf="@id/verticalBeginGuideline"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        style="@style/Button.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_auto_text"
        android:paddingVertical="15dp"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideLine"
        app:layout_constraintStart_toStartOf="@id/verticalBeginGuideline"
        app:layout_constraintBottom_toBottomOf="@id/horizontalEndGuideline"
        />

</androidx.constraintlayout.widget.ConstraintLayout>